[package]
name = "topological_peak_detection"
version = "0.1.0"
edition = "2021"
authors = ["Dr. Casey Kneale <ckneale@udel.edu>"]
readme = "README.md"
description = "A mostly efficient topological algorithm for finding all peaks in a 1-D signal."
repository = "https://github.com/caseykneale/TopologicalPeakDetection/"
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic_benches"
harness = false